5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4161/executions/1585_2894.log
== TEST (2019-03-21 11:56:28) 
-- CODE:
s1 = float(input("preço do jogo: "))
print(s1*8 + 45)
-- OUTPUT:
54.84
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:57:01) 
-- CODE:
s1 = 2
print(s1*8 + 45)
-- OUTPUT:
61
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:59:29) 
-- CODE:
preco = float(input("preço do jogo: "))
print(preco)
-- OUTPUT:
1.23
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:59:30) 
-- CODE:
preco = float(input("preço do jogo: "))
print(preco)
-- OUTPUT:
1.23
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:59:30) 
-- CODE:
preco = float(input("preço do jogo: "))
print(preco)
-- OUTPUT:
1.23
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 21:19:10) 
-- CODE:
preco = float(input("preço do jogo")
frete = 45.0
s1 = 40.0
total = 8*preco + frete
print(total)
-- ERROR:
File "XXXX", line 2
    frete = 45.0
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 21:19:44) 
-- CODE:
preco = float(input("preço do jogo: ")
frete = 45.0
s1 = 40.0
total = 8*preco + frete
print(total)
-- ERROR:
File "XXXX", line 2
    frete = 45.0
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 21:19:54) 
-- CODE:
preco = float(input("preço do jogo: ")

s1 = 40.0
total = 8*preco + frete
print(total)
-- ERROR:
File "XXXX", line 3
    s1 = 40.0
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 21:20:03) 
-- CODE:
preco = float(input("preço do jogo: ")


total = 8*preco + frete
print(total)
-- ERROR:
File "XXXX", line 4
    total = 8*preco + frete
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 21:20:35) 
-- CODE:
preco = float(input("preço do jogo: ")


total = 8*preco + frete
print(total)
-- ERROR:
File "XXXX", line 4
    total = 8*preco + frete
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 21:20:39) 
-- CODE:
preco = float(input("preço do jogo: ")


total = 8*preco + frete
print(total)
-- ERROR:
File "XXXX", line 4
    total = 8*preco + frete
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 21:20:44) 
-- CODE:
preco = float(input("preço do jogo: ")


total = 8*preco + frete
print(total)
-- ERROR:
File "XXXX", line 4
    total = 8*preco + frete
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 21:21:04) 
-- CODE:
preco = float(input("preço do jogo: ")


total = 8*preco + frete
print(total)
-- ERROR:
File "XXXX", line 4
    total = 8*preco + frete
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 21:21:27) 
-- CODE:
print("d")
-- OUTPUT:
d
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 21:23:32) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = float(input("Qual o valor unitario do jogo? "))

# Calculo do valor a ser pago, incluindo o frete:
total = 8*var + 45

# Impressao do valor total:
print(total)
-- OUTPUT:
54.84
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 21:23:38) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = float(input("Qual o valor unitario do jogo? "))

# Calculo do valor a ser pago, incluindo o frete:
total = 8*var + 45

# Impressao do valor total:
print(total)
-- EXECUTION TIME:
0.204139
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
54.84
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:
2893.0
-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
991941.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
